Fix svg width on mobile

--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -61,6 +61,10 @@
   text-align: center;
 }
 
+.post-divider-svg {
+  max-width: 100%;
+}
+
 figcaption {
   color: #6d6d6d;
   font-size: 16px;
